@@ -195,6 +195,8 @@ M2UEnabled=1
 macCloneEnabled=0
 RemoteManagement=1
 RemoteSSH=1
+RemoteFTP=0
+RemoteTelnet=0
 UDPXYMode=0
 vpnEnabled=off
 vpnType=0
